--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,8 @@ edition = "2018"
 [dependencies]
 gitlab-api = "0.6"
 dotenv = "0.15.0"
+
+[target.x86_64-apple-darwin.openssl-sys]
+rustc-link-search = [ "/usr/local/opt/openssl/lib" ]
+rustc-link-lib = [ "ssl", "crypto" ]
+include = [ "/usr/local/opt/openssl/include" ]
